<resources>
    <string name="identities">Identities</string>
    <string name="values">Values</string>
    <string name="accounts_navigation_menu_header">Values</string>
    <string name="services">Services</string>
    <string name="activity">Activity</string>
    <string name="barcode">Barcode</string>
    <string name="add">Add</string>
    <string name="edit_order">Edit order</string>
    <string name="settings">Settings</string>
    <string name="welcome_to_minerva">Welcome to Minerva!</string>
    <string name="create_new_wallet">Create new wallet</string>
    <string name="import_wallet">Import</string>
    <string name="enter_your_backup_words">Enter your Secret Recovery Phrase</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="no_data_available">No data available</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="unknown_words">Unknown words entered. Please review them.</string>
    <string name="new_identity">New Identity</string>
    <string name="identity_label">Identity: %s</string>
    <string name="edit_identity_order">Rearrange Identities</string>
    <string name="edit_account_order">Rearrange Accounts</string>
    <string name="edit_service_order">Rearrange Services</string>
    <string name="edit_credentials_order">Rearrange Credentials</string>
    <string name="personal_data">Personal data</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="country">Country</string>
    <string name="create_new_identity">Create new identity</string>
    <string name="identity_name_label">Identity Name</string>
    <string name="more_fields">More fields</string>
    <string name="wrong_email">Wrong email</string>
    <string name="can_not_be_empty">This field should not be empty</string>
    <string name="unexpected_error">Unexpected error occurred. Please try again later.</string>
    <string name="update_identity">Update identity</string>
    <string name="empty_identity_name">Identity name is empty</string>
    <string name="missing_required_data">Missing required data</string>
    <string name="backup">Backup</string>
    <string name="account_backup">Account Backup</string>
    <string name="i_will_safety_remember">I stored them safely</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="backup_instruction">The Secret Recovery Phrase is used to recover the wallet and restore all needed keys:</string>
    <string name="mnemonic_saved_to_clip_board">Secret Recovery Phrase saved to clip board</string>
    <string name="backup_alert_title">You haven\'t yet made a backup of your Minerva Wallet.</string>
    <string name="sync_alert_title">You are currently offline. Please make sure you are online regularly to back up your data needed for a full Minerva Wallet recovery.</string>
    <string name="backup_alert_message">This is needed in order to recover identities and accounts in case something goes wrong with your phone.</string>
    <string name="sync_alert_message">Data related to your Minerva Wallet could not yet be stored to a remote system. You cannot recover your data within Minerva even with your Secret Recovery Phrase yet. Make sure the device is connected to the internet and restart the app in order to fix this.</string>
    <string name="close">Close</string>
    <string name="camera_error">Camera initialization error:</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="requested_data">Requested data: </string>
    <string name="required_field">This field is required</string>
    <string name="choose_an_identity">Choose an identity</string>
    <string name="remove_identity_dialog_message">Do you really want to delete this identity?</string>
    <string name="remove_service_dialog_message">Do you really want to remove this service?</string>
    <string name="remove_safe_account_dialog_message">Remove %1$s from %2$s safe account?</string>
    <string name="hide_account_dialog_message_part_1">After confirming this message, this account will be hidden and because the network is UNMAINTAINED, the account CANNOT be shown again.</string>
    <string name="hide_account_dialog_message_part_2">To access this account again, you have to import the private key into a wallet software which still supports this network.</string>
    <string name="hide_account_dialog_title">Permanently hide \n\t\t\t\t\taccount</string>
    <string name="remove_owner">Remove owner</string>
    <string name="replace">Replace</string>
    <string name="replace_all">Replace all</string>
    <string name="add_as_new">Add as new</string>
    <string name="identity">Identity</string>
    <string name="select_identity_message">Please select identity</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="amount">Amount</string>
    <string name="add_safe_account">Add safe account</string>
    <string name="login_success_title">Painless Login Successful</string>
    <string name="login_success_message">You successfully logged into Service</string>
    <string name="login_failure_title">Painless Login Failure</string>
    <string name="login_failure_message">Login to service failed</string>
    <string name="dismiss">Dismiss</string>
    <string name="last_used">Last used:</string>
    <string name="add_account">Add account</string>
    <string name="transaction_success_title">Transaction Successful</string>
    <string name="transaction_success_message">You successfully transferred  %1$s %2$s</string>
    <string name="transaction_error_title">Error: Transaction failed</string>
    <string name="transaction_error_message"><b>Error cause:</b> %s</string>
    <string name="transaction_error_details_message">Transfer of %1$s %2$d failed.</string>
    <string name="receiver">Receiver</string>
    <string name="gas_price_gwei">Gas Price (Gwei)</string>
    <string name="gas_limit">Gas Limit</string>
    <string name="transaction_cost_label">Transaction cost:</string>
    <string name="transaction_cost_amount">%1$s %2$s</string>
    <string name="transactions_error_title">Transaction error occurs</string>
    <string name="transactions_error_message">Unexpected error occurred while making transaction actions</string>
    <string name="address_saved_to_clip_board">Address saved to clipboard</string>
    <string name="identity_saved_to_clipboard">Identity saved to clipboard</string>
    <string name="private_key_saved_to_clipboard">Private Key saved to clipboard</string>
    <string name="activities_error">Error while fetching activities</string>
    <string name="removed">Removed</string>
    <string name="hidden">Hidden</string>
    <string name="changed">Changed</string>
    <string name="added">Added</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="failed">Failed</string>
    <string name="logIn">Log in</string>
    <string name="authorised">Authorised</string>
    <string name="signed">Signed</string>
    <string name="updated">Updated</string>
    <string name="account_action_label">Account %s</string>
    <string name="safe_account_action_label">Safe Account %s</string>
    <string name="identity_name">Identity %s</string>
    <string name="credential_action_label">Credential %s</string>
    <string name="credential_import_label">Credential import</string>
    <string name="today">TODAY</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="sent_accounts_label">%1$s %2$s sent to %3$s</string>
    <string name="failed_sent_accounts_label">%1$s %2$s failed sent to %3$s</string>
    <string name="services_login_label">Identity %1$s at %2$s</string>
    <string name="wallet_action_header">%1$s • %2$s</string>
    <string name="service_action_label">%s interaction</string>
    <string name="service_connection_request">Service Connection Request</string>
    <string name="connection_label">wants to connect to</string>
    <string name="minerva">Minerva</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="confirm_transaction">Confirm transaction</string>
    <string name="recipient">Recipient</string>
    <string name="iban">IBAN</string>
    <string name="finger_print_instruction">Confirm this operation with your fingerprint</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="share_via">Share via</string>
    <string name="no_funds">No funds</string>
    <string name="processing">Processing</string>
    <string name="channel_id">MinervaLoginChannel</string>
    <string name="message">Message</string>
    <string name="not_existed_identity_message">Identity that you already logged in does no exist</string>
    <string name="fill_requested_data_message">Pls fill Identity %s with requested data</string>
    <string name="add_owner">Add owner</string>
    <string name="current_owners">Current owners</string>
    <string name="owner_address">Owner address</string>
    <string name="login_request_message">Please double tap to confirm login</string>
    <string name="did">DID</string>
    <string name="required">Required</string>
    <string name="change_account">Change Account</string>
    <string name="show_identity">Show identity</string>
    <string name="credentials">Credentials</string>
    <string name="connected_services">Connected services</string>
    <string name="success">Success</string>
    <string name="error_header">An error occurred</string>
    <string name="error_title">Error occurs</string>
    <string name="auth_error_title">Error during authentication</string>
    <string name="attached_credential_success">Your credential was successfully attached to your identity %s</string>
    <string name="attached_credential_failure">The imported credential could not be attached to any of your identities</string>
    <string name="remove_credential_dialog_title">Remove Credential?</string>
    <string name="remove_credential_dialog_message">You will have to get a new credential from the issuer.</string>
    <string name="update_credential_message">Do you want to update your existing credential?</string>
    <string name="credentials_label">Credentials</string>
    <string name="contacts_label">Contacts</string>
    <string name="my_identities_label">My Identities</string>
    <string name="connections_label">Connections</string>
    <string name="dapps_label">Dapps</string>
    <string name="valid_until">Valid until:</string>
    <string name="ok">OK</string>
    <string name="take_photo">Take new photo</string>
    <string name="choose_existed_photo">Select from gallery</string>
    <string name="delete_photo">Delete photo</string>
    <string name="disconnect">Disconnect</string>
    <string name="unmaintained_network_message_1">This network is not maintained \nanymore and over time transfers from accounts might be not possible any \nmore.</string>
    <string name="unmaintained_network_message_2">If you experience such a problem \nyou will have to export the private key and import it to another wallet, which still supports transactions on that network.\n\nFurther assistance can be given on our support channels.</string>
    <string name="unmaintained_network_message_3">Don’t show this message again</string>
    <string name="exclamation_mark">!</string>
</resources>