<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/identities"
        android:enabled="true"
        android:icon="@drawable/ic_identities"
        android:title="@string/identities"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/values"
        android:enabled="true"
        android:icon="@drawable/ic_values"
        android:title="@string/accounts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/services"
        android:enabled="true"
        android:icon="@drawable/ic_services"
        android:title="@string/services"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/activity"
        android:enabled="true"
        android:icon="@drawable/ic_activity"
        android:title="@string/activity"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>