<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/remove"
        android:enabled="true"
        android:title="@string/remove"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/disconnect"
        android:enabled="true"
        android:icon="@drawable/ic_disconnect"
        android:title="@string/disconnect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/end_session"
        android:enabled="true"
        android:icon="@drawable/ic_end_session"
        android:title="@string/end_session"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/change_account"
        android:enabled="true"
        android:icon="@drawable/ic_change_account"
        android:title="@string/change_account"
        app:showAsAction="ifRoom" />
</menu>