<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/walletConnect"
        android:enabled="true"
        android:icon="@drawable/ic_wallet_connect"
        android:title="@string/walletConnect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/safeAccountSettings"
        android:enabled="true"
        android:title="@string/settings"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/addSafeAccount"
        android:enabled="true"
        android:icon="@drawable/ic_lock"
        android:title="@string/add_safe_account"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/remove"
        android:enabled="true"
        android:icon="@drawable/ic_delete"
        android:title="@string/remove"
        app:showAsAction="ifRoom" />
</menu>