<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_white_background"
    android:padding="@dimen/margin_normal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/makePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/black"
        android:padding="@dimen/margin_xsmall"
        android:text="@string/take_photo" />

    <TextView
        android:id="@+id/choosePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/black"
        android:padding="@dimen/margin_xsmall"
        android:text="@string/choose_existed_photo" />

    <TextView
        android:id="@+id/deletePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/black"
        android:padding="@dimen/margin_xsmall"
        android:text="@string/delete_photo" />
</LinearLayout>