<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".identities.edit.EditIdentityFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:clipToPadding="false"
        android:padding="@dimen/margin_normal"
        android:scrollbars="none">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:orientation="horizontal">

                    <minerva.android.widget.LetterLogo
                        android:id="@+id/profileLogo"
                        android:layout_width="@dimen/letter_logo_size"
                        android:layout_height="@dimen/letter_logo_size"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/margin_small"
                        android:backgroundTint="@color/colorSetOneOpacity"
                        android:textColor="@color/colorSetOne"
                        tools:text="I" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/FormTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/identity_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/identityName"
                            style="@style/EditTextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_xsmall"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/personal_data"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/valueName"
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        style="@style/EditTextInputLayoutStyle"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telephone_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumber"
                        style="@style/EditTextInputLayoutStyle"
                        android:inputType="phone"
                        android:digits="0123456789+"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthDate"
                        style="@style/EditTextInputLayoutStyle"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/moreFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_xsmall"
                    android:background="@drawable/border_light_button"
                    android:foreground="@drawable/ripple"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="@dimen/margin_small"
                    android:text="@string/more_fields"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/addressHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_xsmall"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/address"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addressLine1Layout"
                    style="@style/FormTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_line_1"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressLine1"
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addressLine2Layout"
                    style="@style/FormTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_line_2"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressLine2"
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cityLayout"
                    style="@style/FormTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/postcodeLayout"
                    style="@style/FormTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postcode"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/postcode"
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:digits="0123456789-"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/countryLayout"
                    style="@style/FormTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/country"
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <TextView
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:background="@drawable/rounded_button_purple"
        android:clickable="true"
        android:fontFamily="@font/rubik_medium"
        android:foreground="@drawable/ripple"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/create_new_identity"
        android:textColor="@android:color/white" />
</FrameLayout>